--- a/src/assets/styles/aside.scss
+++ b/src/assets/styles/aside.scss
@@ -20,52 +20,33 @@
     width: 100%;
     margin-bottom: 10px;
     background: $aside_background;
+
+    .block-header {
+      font-size: 25px;
+      text-align: center;
+      margin-bottom: 15px;
+    }
   }
 
   .profile {
+    img {
+      background-color: color(grey);
+      height: 80%;
+      width: 80%;
+      border-radius: 50%;
+      margin: auto auto 15px;
+      display: block;
+    }
     h1{
       @extend .block-header;
       font-size: 30px;
       color: #1b1324;
     }
-    .summary {
+    .content {
       margin: 10px;
     }
   }
 
-  .profile img {
-    background-color: color(grey);
-    height: 80%;
-    width: 80%;
-    border-radius: 50%;
-    margin: auto auto 15px;
-    display: block;
-  }
-
-  .block-header {
-    font-size: 25px;
-    text-align: center;
-    margin-bottom: 15px;
-  }
-
-  .search-block {
-    input {
-      float: left;
-      width: calc(100% - 40px);
-      padding: 5px 10px;
-      border: 1px solid #9a9a9a;
-    }
-    button {
-      background: $header_footer_dg;
-      outline: none;
-      width: 30px;
-      border: none;
-      padding: 6px;
-      i {
-        color: $icon-color_c;
-      }
-    }
-  }
   .icons-block {
     padding: 5px;
     font-size: 30px;
@@ -86,24 +67,44 @@
   }
 
   .subscribe-block {
-  }
-  .subscribe {
-    input {
-      width: 100%;
-      margin-top: 10px;
-      padding: 10px;
-      color: black;
-      border-radius: 5px;
-    }
+    .subscribe {
+      input {
+        width: 100%;
+        margin-top: 10px;
+        padding: 10px;
+        color: black;
+        border-radius: 5px;
+      }
 
-    button {
-      width: 100%;
-      margin-top: 10px;
-      padding: 10px;
-      border-radius: 15px;
-      background-color: $icon-color_c;
+      button {
+        width: 100%;
+        margin-top: 10px;
+        padding: 10px;
+        border-radius: 15px;
+        background-color: $icon-color_c;
+      }
     }
   }
+
+  .search-block {
+    input {
+      float: left;
+      width: calc(100% - 40px);
+      padding: 5px 10px;
+      border: 1px solid #9a9a9a;
+    }
+    button {
+      background: $header_footer_dg;
+      outline: none;
+      width: 30px;
+      border: none;
+      padding: 6px;
+      i {
+        color: $icon-color_c;
+      }
+    }
+  }
+
   .tags-block {
     .tags span {
       display: inline-block;
@@ -118,14 +119,16 @@
     }
   }
 
-  .comments-header {
-    @extend .block-header;
-    grid-column: 1/3;
-  }
   .comments-block {
     display: grid;
     grid-gap: 7px;
     grid-template-columns: 60px calc(100% - 60px);
+
+    .comments-header {
+      @extend .block-header;
+      grid-column: 1/3;
+    }
+
     .avatar {
       grid-column: 1/2;
       border-radius: 50%;
