--- a/src/assets/styles/blog.css
+++ b/src/assets/styles/blog.css
@@ -15,16 +15,14 @@ body {
   grid-template-columns: auto 300px;
   grid-template-rows: 20% auto 15%;
   grid-template-areas: "header header" "main   aside" "footer footer"; }
-
-.menu-close {
-  display: none; }
-
-.menu-toggle {
-  padding: 10px 10px 0 5px;
-  font-size: 24px;
-  display: none;
-  grid-area: menu-toggle;
-  outline: none; }
+  .wrapper .menu-close {
+    display: none; }
+  .wrapper .menu-toggle {
+    padding: 10px 10px 0 5px;
+    font-size: 24px;
+    display: none;
+    grid-area: menu-toggle;
+    outline: none; }
 
 .fa-bars {
   color: #ffe037; }
