--- a/src/assets/styles/aside.scss
+++ b/src/assets/styles/aside.scss
@@ -106,6 +106,9 @@
   }
 
   .tags-block {
+    .tags {
+      text-align: center;
+    }
     .tags span {
       display: inline-block;
       padding: 5px;
