--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -24,6 +24,14 @@
       padding: 10px;
       text-align: center;
 
+      &:hover {
+        .article-photo {
+          transform: scale(1.1, 1.1);
+          -ms-transform: scale(1.1, 1.1);
+          -webkit-transform: scale(1.1, 1.1);
+          z-index: -1;
+        }
+      }
       .article-photo{
         width: 100%;
         transition: transform .7s;
