--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -17,6 +17,11 @@
       min-width: 230px;
       padding: 10px;
       text-align: center; }
+      .main .articles-container .article:hover .article-photo {
+        transform: scale(1.1, 1.1);
+        -ms-transform: scale(1.1, 1.1);
+        -webkit-transform: scale(1.1, 1.1);
+        z-index: -1; }
       .main .articles-container .article .article-photo {
         width: 100%;
         transition: transform .7s;
