--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -17,20 +17,17 @@
       min-width: 230px;
       padding: 10px;
       text-align: center; }
-      .main .articles-container .article:hover .article-photo {
+      .main .articles-container .article:hover .article-photo img {
         transform: scale(1.1, 1.1);
         -ms-transform: scale(1.1, 1.1);
         -webkit-transform: scale(1.1, 1.1);
-        z-index: -1; }
+        z-index: 25; }
       .main .articles-container .article .article-photo {
-        width: 100%;
-        transition: transform .7s;
-        position: relative; }
-      .main .articles-container .article .article-photo:hover {
-        transform: scale(1.1, 1.1);
-        -ms-transform: scale(1.1, 1.1);
-        -webkit-transform: scale(1.1, 1.1);
-        z-index: 100; }
+        overflow: hidden; }
+        .main .articles-container .article .article-photo img {
+          width: 100%;
+          transition: transform .7s;
+          position: relative; }
       .main .articles-container .article .article-data {
         display: flex;
         flex-wrap: wrap;
