--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,30 +19,27 @@
       position: relative;
       min-height: 320px;
       min-width: 230px;
-      //max-height: 360px;
-      //max-width: 250px;
       padding: 10px;
       text-align: center;
 
       &:hover {
         .article-photo {
-          transform: scale(1.1, 1.1);
-          -ms-transform: scale(1.1, 1.1);
-          -webkit-transform: scale(1.1, 1.1);
-          z-index: -1;
+          img {
+            transform: scale(1.1, 1.1);
+            -ms-transform: scale(1.1, 1.1);
+            -webkit-transform: scale(1.1, 1.1);
+            z-index: 25;
+          }
         }
       }
       .article-photo{
-        width: 100%;
-        transition: transform .7s;
-        position: relative;
-      }
+        overflow: hidden;
 
-      .article-photo:hover {
-        transform: scale(1.1, 1.1);
-        -ms-transform: scale(1.1, 1.1);
-        -webkit-transform: scale(1.1, 1.1);
-        z-index: 100;
+        img {
+          width: 100%;
+          transition: transform .7s;
+          position: relative;
+        }
       }
 
       .article-data {
@@ -50,7 +47,6 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: flex-start;
-       // align-content: flex-start;
       }
       .article-title {
         font-size: 25px;
