--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -39,6 +39,7 @@
           width: 100%;
           transition: transform .7s;
           position: relative;
+          display: block;
         }
       }
 
